--- a/sections/main-search.liquid
+++ b/sections/main-search.liquid
@@ -44,6 +44,14 @@
   assign sort_by = search.sort_by | default: search.default_sort_by
   assign terms = search.terms | escape
   assign search_url = '?q=' | append: terms | append: '&options%5Bprefix%5D=last&sort_by=' | append: sort_by
+  
+  if settings.spacing_grid_horizontal == 0 and settings.spacing_grid_vertical == 0 and settings.card_style == 'card'
+    assign collapsed_class = 'grid--collapsed grid--collapsed-x grid--collapsed-y'
+  elsif settings.spacing_grid_horizontal == 0
+    assign collapsed_class = 'grid--collapsed grid--collapsed-x'
+  elsif settings.spacing_grid_vertical == 0 and settings.card_style == 'card'
+    assign collapsed_class = 'grid--collapsed grid--collapsed-y'
+  endif
 -%}
 
 {%- style -%}
@@ -199,7 +207,7 @@
           {% paginate search.results by 24 %}
             <div class="template-search__results collection{% if section.settings.filter_type != 'vertical' %} page-width{% endif %}" id="product-grid" data-id="{{ section.id }}">
               <div class="loading-overlay gradient"></div>
-              <ul class="grid product-grid  grid--{{ section.settings.columns_mobile }}-col-tablet-down grid--{{ section.settings.columns_desktop }}-col-desktop" role="list">
+              <ul class="grid product-grid contains-card grid--{{ section.settings.columns_mobile }}-col-tablet-down grid--{{ section.settings.columns_desktop }}-col-desktop {{ collapsed_class }}" role="list">
                 {%- for item in search.results -%}
                   {% assign lazy_load = false %}
                   {%- if forloop.index > 2 -%}
