Add border collapse to grid

--- a/assets/component-card.css
+++ b/assets/component-card.css
@@ -32,9 +32,9 @@
 .card--standard .card__inner:after {
   content: '';
   position: absolute;
-  width: calc(var(--card-border-width) * 2 + 100%);
-  height: calc(var(--card-border-width) * 2 + 100%);
   top: calc(var(--card-border-width) * -1);
+  right: calc(var(--card-border-width) * -1);
+  bottom: calc(var(--card-border-width) * -1);
   left: calc(var(--card-border-width) * -1);
   z-index: -1;
   border-radius: var(--card-corner-radius);
@@ -51,6 +51,21 @@
 .card--card .card__inner .card__media {
   border-bottom-right-radius: 0;
   border-bottom-left-radius: 0;
+}
+
+.grid--collapsed-y.contains-card .card-wrapper {
+  height: calc(100% - var(--collapsed-offset-y));
+}
+
+.grid--collapsed.contains-card .card {
+  margin-bottom: var(--collapsed-offset-y);
+  margin-right: var(--collapsed-offset-x);
+}
+
+.grid--collapsed.contains-card .card--card:after,
+.grid--collapsed.contains-card .card--standard .card__inner:after {
+  margin-top: var(--collapsed-shadow-offset-y);
+  margin-left: var(--collapsed-shadow-offset-x);
 }
 
 .card--standard.card--text {
