--- a/assets/section-multicolumn.css
+++ b/assets/section-multicolumn.css
@@ -62,7 +62,6 @@
 
 .multicolumn:not(.background-none) .multicolumn-card {
   background: rgb(var(--color-background));
-  height: 100%;
 }
 
 .multicolumn.background-primary .multicolumn-card {
@@ -198,6 +197,11 @@
 .multicolumn-card {
   position: relative;
   box-sizing: border-box;
+  height: 100%;
+}
+
+.grid--collapsed.contains-content-container .multicolumn-card {
+  height: calc(100% - var(--collapsed-offset-y));
 }
 
 .multicolumn-card > .multicolumn-card__image-wrapper--full-width:not(.multicolumn-card-spacing) {
