--- a/assets/base.css
+++ b/assets/base.css
@@ -977,6 +977,13 @@ summary::-webkit-details-marker {
   row-gap: var(--grid-mobile-vertical-spacing);
 }
 
+.grid--collapsed.contains-card,
+.grid--collapsed.contains-media,
+.grid--collapsed.contains-content-container {
+  padding-bottom: var(--collapsed-offset-y);
+  margin-right: var(--collapsed-offset-x);
+}
+
 @media screen and (min-width: 750px) {
   .grid {
     column-gap: var(--grid-desktop-horizontal-spacing);
@@ -2783,6 +2790,16 @@ details-disclosure > details {
   }
 }
 
+.grid--collapsed.contains-content-container .content-container {
+  margin-bottom: var(--collapsed-offset-y);
+  margin-right: var(--collapsed-offset-x);
+}
+
+.grid--collapsed.contains-content-container .content-container:after {
+  margin-top: var(--collapsed-shadow-offset-y);
+  margin-left: var(--collapsed-shadow-offset-x);
+}
+
 .global-media-settings {
   position: relative;
   border: var(--media-border-width) solid rgba(var(--color-foreground), var(--media-border-opacity));
@@ -2824,6 +2841,16 @@ details-disclosure > details {
   border-radius: 0;
   border-left: none;
   border-right: none;
+}
+
+.grid--collapsed.contains-media .global-media-settings {
+  margin-bottom: var(--collapsed-offset-y);
+  margin-right: var(--collapsed-offset-x);
+}
+
+.grid--collapsed.contains-media .global-media-settings:after {
+  margin-top: var(--collapsed-shadow-offset-y);
+  margin-left: var(--collapsed-shadow-offset-x);
 }
 
 /* check for flexbox gap in older Safari versions */
