Add to product media grid and cleanup

--- a/assets/component-card.css
+++ b/assets/component-card.css
@@ -57,6 +57,11 @@
   height: calc(100% - var(--collapsed-offset-y));
 }
 
+.grid--collapsed.contains-card {
+  padding-bottom: var(--collapsed-offset-y);
+  margin-right: var(--collapsed-offset-x);
+}
+
 .grid--collapsed.contains-card .card {
   margin-bottom: var(--collapsed-offset-y);
   margin-right: var(--collapsed-offset-x);
