--- a/assets/section-main-product.css
+++ b/assets/section-main-product.css
@@ -550,6 +550,10 @@ a.product__text {
   .product__media-list .product__media-item {
     width: 100%;
   }
+
+  .product__media-list.grid--collapsed .product__media-item {
+    --collapsed-shadow-offset-x: 0px;
+  }
 }
 
 .product__media-icon .icon {
@@ -592,6 +596,10 @@ a.product__text {
   .grid__item.product__media-item--full {
     width: 100%;
   }
+
+  .product__media-list.grid--collapsed-y .product__media-item:first-child {
+    --collapsed-shadow-offset-y: 0px;
+  }
 }
 
 @media screen and (min-width: 990px) {
@@ -612,6 +620,12 @@ a.product__text {
   .product__modal-opener:hover .product__media-icon,
   .product__modal-opener:focus .product__media-icon {
     opacity: 1;
+  }
+
+  .product__media-list.grid--collapsed-x .product__media-item:first-child,
+  .product__media-list.grid--collapsed-x .product__media-item--full,
+  .product__media-list.grid--collapsed-x .product__media-item:nth-child(even) {
+    --collapsed-shadow-offset-x: 0px;
   }
 }
 
