--- a/assets/base.css
+++ b/assets/base.css
@@ -177,8 +177,8 @@
   --shadow-opacity: var(--text-boxes-shadow-opacity);
 }
 
-.contains-media,
-.global-media-settings {
+.product__media-gallery .slider,
+.product__media-item {
   --border-radius: var(--media-radius);
   --border-width: var(--media-border-width);
   --border-opacity: var(--media-border-opacity);
@@ -975,13 +975,6 @@ summary::-webkit-details-marker {
   list-style: none;
   column-gap: var(--grid-mobile-horizontal-spacing);
   row-gap: var(--grid-mobile-vertical-spacing);
-}
-
-.grid--collapsed.contains-card,
-.grid--collapsed.contains-media,
-.grid--collapsed.contains-content-container {
-  padding-bottom: var(--collapsed-offset-y);
-  margin-right: var(--collapsed-offset-x);
 }
 
 @media screen and (min-width: 750px) {
@@ -2790,16 +2783,6 @@ details-disclosure > details {
   }
 }
 
-.grid--collapsed.contains-content-container .content-container {
-  margin-bottom: var(--collapsed-offset-y);
-  margin-right: var(--collapsed-offset-x);
-}
-
-.grid--collapsed.contains-content-container .content-container:after {
-  margin-top: var(--collapsed-shadow-offset-y);
-  margin-left: var(--collapsed-shadow-offset-x);
-}
-
 .global-media-settings {
   position: relative;
   border: var(--media-border-width) solid rgba(var(--color-foreground), var(--media-border-opacity));
@@ -2848,6 +2831,24 @@ details-disclosure > details {
   margin-right: var(--collapsed-offset-x);
 }
 
+.grid--collapsed.contains-media .global-media-settings:after {
+  margin-top: var(--collapsed-shadow-offset-y);
+  margin-left: var(--collapsed-shadow-offset-x);
+}
+
+.grid--collapsed.contains-content-container,
+.grid--collapsed.contains-media {
+  padding-bottom: var(--collapsed-offset-y);
+  margin-right: var(--collapsed-offset-x);
+}
+
+.grid--collapsed.contains-content-container .content-container,
+.grid--collapsed.contains-media .global-media-setting {
+  margin-bottom: var(--collapsed-offset-y);
+  margin-right: var(--collapsed-offset-x);
+}
+
+.grid--collapsed.contains-content-container .content-container:after,
 .grid--collapsed.contains-media .global-media-settings:after {
   margin-top: var(--collapsed-shadow-offset-y);
   margin-left: var(--collapsed-shadow-offset-x);
