Update main collections list grid classes

--- a/assets/base.css
+++ b/assets/base.css
@@ -177,8 +177,8 @@
   --shadow-opacity: var(--text-boxes-shadow-opacity);
 }
 
-.product__media-gallery .slider,
-.product__media-item {
+.contains-media,
+.global-media-settings {
   --border-radius: var(--media-radius);
   --border-width: var(--media-border-width);
   --border-opacity: var(--media-border-opacity);
@@ -2826,16 +2826,6 @@ details-disclosure > details {
   border-right: none;
 }
 
-.grid--collapsed.contains-media .global-media-settings {
-  margin-bottom: var(--collapsed-offset-y);
-  margin-right: var(--collapsed-offset-x);
-}
-
-.grid--collapsed.contains-media .global-media-settings:after {
-  margin-top: var(--collapsed-shadow-offset-y);
-  margin-left: var(--collapsed-shadow-offset-x);
-}
-
 .grid--collapsed.contains-content-container,
 .grid--collapsed.contains-media {
   padding-bottom: var(--collapsed-offset-y);
@@ -2843,7 +2833,7 @@ details-disclosure > details {
 }
 
 .grid--collapsed.contains-content-container .content-container,
-.grid--collapsed.contains-media .global-media-setting {
+.grid--collapsed.contains-media .global-media-settings {
   margin-bottom: var(--collapsed-offset-y);
   margin-right: var(--collapsed-offset-x);
 }
