Add collapsed corners for grid

--- a/assets/base.css
+++ b/assets/base.css
@@ -1002,6 +1002,13 @@ summary::-webkit-details-marker {
   }
 }
 
+.grid--collapsed .grid__item {
+  --top-left-radius: var(--border-radius);
+  --top-right-radius: var(--border-radius);
+  --bottom-right-radius: var(--border-radius);
+  --bottom-left-radius: var(--border-radius);
+}
+
 .grid--gapless.grid {
   column-gap: 0;
   row-gap: 0;
@@ -2847,13 +2854,30 @@ details-disclosure > details {
 }
 
 .grid--collapsed-x.contains-content-container .content-container:after,
-.grid--collapsed-x.contains-media .global-media-settings:after {
+.grid--collapsed-y.contains-media .global-media-settings:after {
   margin-left: var(--collapsed-shadow-offset-x);
 }
 
-.grid--collapsed-y.contains-content-container .content-container:after,
+.grid--collapsed-x.contains-content-container .content-container:after,
 .grid--collapsed-y.contains-media .global-media-settings:after {
   margin-top: var(--collapsed-shadow-offset-y);
+}
+
+.grid--collapsed.contains-content-container .content-container,
+.grid--collapsed.contains-media .global-media-settings,
+.grid--collapsed.contains-content-container .content-container:after,
+.grid--collapsed.contains-media .global-media-settings:after {
+  border-radius: var(--top-left-radius) var(--top-right-radius) var(--bottom-right-radius) var(--bottom-left-radius);
+}
+
+.grid--collapsed.contains-media .global-media-settings img,
+.grid--collapsed.contains-media .global-media-settings iframe,
+.grid--collapsed.contains-media .global-media-settings model-viewer,
+.grid--collapsed.contains-media .global-media-settings video {
+  border-top-left-radius: calc(var(--top-left-radius) - var(--media-border-width));
+  border-top-right-radius: calc(var(--top-right-radius) - var(--media-border-width));
+  border-bottom-right-radius: calc(var(--bottom-right-radius) - var(--media-border-width));
+  border-bottom-left-radius: calc(var(--bottom-left-radius) - var(--media-border-width));
 }
 
 /* check for flexbox gap in older Safari versions */
