Add to product media and main blog

--- a/assets/component-card.css
+++ b/assets/component-card.css
@@ -48,14 +48,33 @@
   border-radius: calc(var(--card-corner-radius) - var(--card-border-width) - var(--card-image-padding));
 }
 
-.grid--collapsed.contains-card .grid__item .card--card,
-.grid--collapsed.contains-card .grid__item .card--standard .card__inner,
-.grid--collapsed.contains-card .grid__item .card--card:after,
-.grid--collapsed.contains-card .grid__item .card--standard .card__inner:after {
+.grid[class*='--collapsed'].contains-card .card--card,
+.grid[class*='--collapsed'].contains-card .card--standard .card__inner,
+.grid[class*='--collapsed'].contains-card .card--card:after,
+.grid[class*='--collapsed'].contains-card .card--standard .card__inner:after {
   border-radius: var(--top-left-radius) var(--top-right-radius) var(--bottom-right-radius) var(--bottom-left-radius);
 }
 
-.grid--collapsed.contains-card .grid__item .card__inner .card__media {
+/* is ^ this better? */
+
+.grid--collapsed.contains-card .card--card,
+.grid--collapsed.contains-card .card--standard .card__inner,
+.grid--collapsed.contains-card .card--card:after,
+.grid--collapsed.contains-card .card--standard .card__inner:after,
+.blog--collapsed .card--card,
+.blog--collapsed .card--standard .card__inner,
+.blog--collapsed .card--card:after,
+.blog--collapsed .card--standard .card__inner:after,
+.collage--collapsed .card--card,
+.collage--collapsed .card--standard .card__inner,
+.collage--collapsed .card--card:after,
+.collage--collapsed .card--standard .card__inner:after {
+  border-radius: var(--top-left-radius) var(--top-right-radius) var(--bottom-right-radius) var(--bottom-left-radius);
+}
+
+.grid--collapsed.contains-card .card__inner .card__media,
+.blog--collapsed .card__inner .card__media,
+.collage--collapsed .card__inner .card__media {
   border-top-left-radius: calc(var(--top-left-radius) - var(--card-border-width) - var(--card-image-padding));
   border-top-right-radius: calc(var(--top-right-radius) - var(--card-border-width) - var(--card-image-padding));
   border-bottom-right-radius: calc(var(--bottom-right-radius) - var(--card-border-width) - var(--card-image-padding));
