--- a/assets/section-main-blog.css
+++ b/assets/section-main-blog.css
@@ -60,7 +60,7 @@
   }
 }
 
-.blog--collapsed-y:not(.contains-card--standard) .card-wrapper {
+.blog--collapsed-y .card-wrapper {
   height: calc(100% + var(--card-border-width));
 }
 
@@ -95,4 +95,70 @@
 .blog--collapsed-y.blog-articles--collage.blog-articles--text-only .article:not(:first-child) .card--standard .card__inner:after,
 .blog--collapsed-y.blog-articles--text-only:not(.blog-articles--collage) .article:not(:nth-child(-n + 2)) .card--standard .card__inner:after {
   margin-top: var(--card-border-width);
+}
+
+
+.blog--collapsed .article  {
+  --top-left-radius: 0;
+  --top-right-radius: 0;
+  --bottom-right-radius: 0;
+  --bottom-left-radius: 0;
+}
+
+@media screen and (max-width: 749px) {
+  .blog--collapsed .article:first-child {
+    --top-right-radius: var(--border-radius);
+    --top-left-radius: var(--border-radius);
+  }
+  .blog--collapsed .article:last-child {
+    --bottom-right-radius: var(--border-radius);
+    --bottom-left-radius: var(--border-radius);
+  }
+}
+
+@media screen and (min-width: 750px) {
+  /* collage layout */
+  .blog--collapsed.blog-articles--collage .article:first-child {
+    --top-right-radius: var(--border-radius);
+    --top-left-radius: var(--border-radius);
+  }
+  .blog--collapsed.blog-articles--collage .article:nth-child(3n + 1):last-child,
+  .blog--collapsed.blog-articles--collage .article:nth-child(3n + 2):nth-last-child(-n + 2) {
+    --bottom-left-radius: var(--border-radius);
+  }
+  .blog--collapsed.blog-articles--collage .article:last-child,
+  .blog--collapsed.blog-articles--collage .article:nth-child(3n + 2):last-child {
+    --bottom-right-radius: var(--border-radius);
+  }
+  /* TODO: account for not-y */
+
+  /* grid layout */
+  .blog--collapsed-y:not(.blog-articles--collage) .article:first-child,
+  .blog--collapsed-y:not(.blog-articles--collage):not(.blog--collapsed-x) .article:nth-child(2):nth-child(even) {
+    --top-left-radius: var(--border-radius);
+  }
+  .blog--collapsed-y:not(.blog-articles--collage) .article:nth-child(2),
+  .blog--collapsed-y:not(.blog-articles--collage) .article:only-child,
+  .blog--collapsed-y:not(.blog-articles--collage):not(.blog--collapsed-x) .article:first-child {
+    --top-right-radius: var(--border-radius);
+  }
+  .blog--collapsed-y:not(.blog-articles--collage) .article:last-child:nth-child(odd),
+  .blog--collapsed-y:not(.blog-articles--collage) .article:last-child:nth-child(even),
+  .blog--collapsed-y:not(.blog-articles--collage) .article:nth-last-child(2):nth-child(even),
+  .blog--collapsed-y:not(.blog-articles--collage):not(.blog--collapsed-x) .article:nth-last-child(2):nth-child(odd) {
+    --bottom-right-radius: var(--border-radius);
+  }
+  .blog--collapsed-y:not(.blog-articles--collage) .article:nth-last-child(-n + 2):nth-child(odd),
+  .blog--collapsed-y:not(.blog-articles--collage):not(.blog--collapsed-x) .article:nth-last-child(-n + 2):nth-child(even) {
+    --bottom-left-radius: var(--border-radius);
+  }
+  .blog--collapsed-x:not(.blog-articles--collage):not(.blog--collapsed-y) .article:nth-child(even),
+  .blog--collapsed-x:not(.blog-articles--collage):not(.blog--collapsed-y) .article:nth-child(odd):last-child {
+    --top-right-radius: var(--border-radius);
+    --bottom-right-radius: var(--border-radius);
+  }
+  .blog--collapsed-x:not(.blog-articles--collage):not(.blog--collapsed-y) .article:nth-child(odd) {
+    --top-left-radius: var(--border-radius);
+    --bottom-left-radius: var(--border-radius);
+  }
 }
