--- a/assets/component-card.css
+++ b/assets/component-card.css
@@ -43,19 +43,9 @@
 
 .card .card__inner .card__media {
   overflow: hidden;
-  /* Fix for Safari border bug on hover */
-  z-index: 0;
+  z-index: 0; /* Fix for Safari border bug on hover */
   border-radius: calc(var(--card-corner-radius) - var(--card-border-width) - var(--card-image-padding));
 }
-
-.grid[class*='--collapsed'].contains-card .card--card,
-.grid[class*='--collapsed'].contains-card .card--standard .card__inner,
-.grid[class*='--collapsed'].contains-card .card--card:after,
-.grid[class*='--collapsed'].contains-card .card--standard .card__inner:after {
-  border-radius: var(--top-left-radius) var(--top-right-radius) var(--bottom-right-radius) var(--bottom-left-radius);
-}
-
-/* is ^ this better? */
 
 .grid--collapsed.contains-card .card--card,
 .grid--collapsed.contains-card .card--standard .card__inner,
