--- a/assets/section-main-product.css
+++ b/assets/section-main-product.css
@@ -690,7 +690,7 @@ a.product__text {
 }
 
 .grid--collapsed.contains-media .product__media-toggle:focus-visible:after {
-  box-shadow: 0 0 0 0.3rem rgb(var(--color-background)),0 0 0rem 0.5rem rgba(var(--color-foreground), 0.5);
+  box-shadow: 0 0 0 0.3rem rgb(var(--color-background)), 0 0 0 0.5rem rgba(var(--color-foreground), 0.5);
   border-top-left-radius: calc(var(--top-left-radius) - var(--media-border-width));
   border-top-right-radius: calc(var(--top-right-radius) - var(--media-border-width));
   border-bottom-right-radius: calc(var(--bottom-right-radius) - var(--media-border-width));
@@ -698,7 +698,7 @@ a.product__text {
 }
 
 .grid--collapsed.contains-media .product__media-toggle.focused:after {
-  box-shadow: 0 0 0 0.3rem rgb(var(--color-background)),0 0 0rem 0.5rem rgba(var(--color-foreground), 0.5);
+  box-shadow: 0 0 0 0.3rem rgb(var(--color-background)),0 0 0 0.5rem rgba(var(--color-foreground), 0.5);
   border-radius: var(--top-left-radius) var(--top-right-radius) var(--bottom-right-radius) var(--bottom-left-radius);
 }
 
