Rebase and cleanup

--- a/assets/section-main-product.css
+++ b/assets/section-main-product.css
@@ -650,10 +650,10 @@ a.product__text {
   padding: 0;
   position: absolute;
   top: 0;
+  right: 0;
+  bottom: 0;
   left: 0;
   z-index: 2;
-  height: 100%;
-  width: 100%;
 }
 
 .product__media-toggle:focus-visible {
@@ -678,6 +678,11 @@ a.product__text {
 
 .product__media-toggle:focus-visible:after {
   border-radius: var(--media-radius);
+}
+
+.grid--collapsed.contains-media .product__media-toggle:after {
+  right: calc(var(--media-border-width) * -1);
+  bottom: calc(var(--media-border-width) * -1);
 }
 
 .product-media-modal {
