Collapse non-product standard cards and refactor classes

--- a/assets/component-card.css
+++ b/assets/component-card.css
@@ -57,21 +57,39 @@
   height: calc(100% - var(--collapsed-offset-y));
 }
 
-.grid--collapsed.contains-card {
+/* horizontally offset shadows for all card types */
+.grid--collapsed-x.contains-card {
+  margin-right: var(--collapsed-offset-x);
+}
+/* vertically offset all card style grids and standard style collection/article grids */
+.grid--collapsed-y.contains-card:not(.contains-card--standard),
+.grid--collapsed-y.contains-card--standard:not(.product-grid) {
   padding-bottom: var(--collapsed-offset-y);
-  margin-right: var(--collapsed-offset-x);
 }
 
-.grid--collapsed.contains-card .card {
+/* horizontally offset shadows for all card types */
+.grid--collapsed-x.contains-card .card {
+  margin-right: var(--collapsed-offset-x);
+}
+/* vertically offset all card style cards and standard style collection/article cards */
+.grid--collapsed-y.contains-card .card--card,
+.grid--collapsed-y.contains-card:not(.product-grid) .card--standard {
   margin-bottom: var(--collapsed-offset-y);
-  margin-right: var(--collapsed-offset-x);
 }
 
-.grid--collapsed.contains-card .card--card:after,
-.grid--collapsed.contains-card .card--standard .card__inner:after {
-  margin-top: var(--collapsed-shadow-offset-y);
+/* horizontally offset shadows for all card types */
+.grid--collapsed-x.contains-card .card--card:after,
+.grid--collapsed-x.contains-card .card--standard .card__inner:after {
   margin-left: var(--collapsed-shadow-offset-x);
 }
+/* vertically offset shadows for card style cards only */
+.grid--collapsed-y.contains-card .card--card:after {
+  margin-top: var(--collapsed-shadow-offset-y);
+}
+/* this line would offset shadows for standard card text only, but should not apply to standard cards with images */
+/* .grid--collapsed.contains-card:not(.product-grid) .card--standard .card__inner:after {
+  margin-top: var(--collapsed-shadow-offset-y);
+} */
 
 .card--standard.card--text {
   background-color: transparent;
