--- a/sections/main-collection-product-grid.liquid
+++ b/sections/main-collection-product-grid.liquid
@@ -26,16 +26,6 @@
   }
 {%- endstyle -%}
 
-{%- liquid
-  if settings.spacing_grid_horizontal == 0 and settings.spacing_grid_vertical == 0 and settings.card_style == 'card'
-    assign collapsed_class = 'grid--collapsed grid--collapsed-x grid--collapsed-y'
-  elsif settings.spacing_grid_horizontal == 0
-    assign collapsed_class = 'grid--collapsed grid--collapsed-x'
-  elsif settings.spacing_grid_vertical == 0 and settings.card_style == 'card'
-    assign collapsed_class = 'grid--collapsed grid--collapsed-y'
-  endif
--%}
-
 <div class="section-{{ section.id }}-padding">
   {% comment %} Sort is the first tabbable element when filter type is vertical {% endcomment %}
   {%- if section.settings.enable_sorting and section.settings.filter_type == 'vertical' -%}
@@ -111,7 +101,7 @@
             <ul id="product-grid" data-id="{{ section.id }}" class="
               grid product-grid grid--{{ section.settings.columns_mobile }}-col-tablet-down
               grid--{{ section.settings.columns_desktop }}-col-desktop
-              {{ collapsed_class }} contains-card">
+              {% render 'collapsed-classes' %} contains-card">
               {%- for product in collection.products -%}
                 {% assign lazy_load = false %}
                 {%- if forloop.index > 2 -%}
