--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -31,16 +31,6 @@
     <link id="ModelViewerOverride" rel="stylesheet" href="{{ 'component-model-viewer-ui.css' | asset_url }}" media="print" onload="this.media='all'">
   {%- endif -%}
 
-  {%- liquid
-    if settings.spacing_grid_horizontal == 0 and settings.spacing_grid_vertical == 0
-      assign collapsed_class = 'grid--collapsed grid--collapsed-x grid--collapsed-y'
-    elsif settings.spacing_grid_horizontal == 0
-      assign collapsed_class = 'grid--collapsed grid--collapsed-x'
-    elsif settings.spacing_grid_vertical == 0
-      assign collapsed_class = 'grid--collapsed grid--collapsed-y'
-    endif
-  -%}
-
   <div class="product product--{{ section.settings.media_size }} product--{{ section.settings.gallery_layout }} grid grid--1-col {% if product.media.size > 0 %}grid--2-col-tablet{% else %}product--no-media{% endif %}">
     <div class="grid__item product__media-wrapper">
       <media-gallery id="MediaGallery-{{ section.id }}" role="region" {% if section.settings.enable_sticky_info %}class="product__media-gallery"{% endif %} aria-label="{{ 'products.product.media.gallery_viewer' | t }}" data-desktop-layout="{{ section.settings.gallery_layout }}">
@@ -49,7 +39,7 @@
           <a class="skip-to-content-link button visually-hidden quick-add-hidden" href="#ProductInfo-{{ section.id }}">
             {{ "accessibility.skip_to_product_info" | t }}
           </a>
-          <ul id="Slider-Gallery-{{ section.id }}" class="product__media-list contains-media grid grid--peek {{ collapsed_class }} list-unstyled slider slider--mobile" role="list">
+          <ul id="Slider-Gallery-{{ section.id }}" class="product__media-list contains-media grid grid--peek{% render 'collapsed-classes' %} list-unstyled slider slider--mobile" role="list">
             {%- liquid
               assign variant_images = product.images | where: 'attached_to_variant?', true | map: 'src'
               assign media_count = product.media.size
