Minor blog and slider edits

--- a/assets/component-card.css
+++ b/assets/component-card.css
@@ -57,7 +57,7 @@
   height: calc(100% - var(--collapsed-offset-y));
 }
 
-/* horizontally offset shadows for all card types */
+/* horizontally all card types */
 .grid--collapsed-x.contains-card {
   margin-right: var(--collapsed-offset-x);
 }
@@ -67,7 +67,7 @@
   padding-bottom: var(--collapsed-offset-y);
 }
 
-/* horizontally offset shadows for all card types */
+/* horizontally offset all card types */
 .grid--collapsed-x.contains-card .card {
   margin-right: var(--collapsed-offset-x);
 }
@@ -86,10 +86,6 @@
 .grid--collapsed-y.contains-card .card--card:after {
   margin-top: var(--collapsed-shadow-offset-y);
 }
-/* this line would offset shadows for standard card text only, but should not apply to standard cards with images */
-/* .grid--collapsed.contains-card:not(.product-grid) .card--standard .card__inner:after {
-  margin-top: var(--collapsed-shadow-offset-y);
-} */
 
 .card--standard.card--text {
   background-color: transparent;
