Slider and media improvements

--- a/assets/component-slider.css
+++ b/assets/component-slider.css
@@ -262,6 +262,23 @@ slider-component.slider-component-full-width {
   .slider.slider--desktop.grid--collapsed .slider__slide:first-child {
     --collapsed-shadow-offset-x: 0px;
   }
+
+  .slider.slider--desktop.grid.grid--collapsed-x .slider__slide.grid__item {
+    --top-left-radius: 0px;
+    --top-right-radius: 0px;
+    --bottom-right-radius: 0px;
+    --bottom-left-radius: 0px;
+  }
+
+  .slider.slider--desktop.grid.grid--collapsed-x .slider__slide.grid__item:first-child {
+    --top-left-radius: var(--border-radius);
+    --bottom-left-radius: var(--border-radius);
+  }
+
+  .slider.slider--desktop.grid.grid.grid--collapsed-x .slider__slide.grid__item:last-child {
+    --top-right-radius: var(--border-radius);
+    --bottom-right-radius: var(--border-radius);
+  }
 }
 
 @media (prefers-reduced-motion) {
