--- a/assets/section-main-product.css
+++ b/assets/section-main-product.css
@@ -1246,9 +1246,15 @@ a.product__text {
 }
 
 @media screen and (min-width: 750px) and (max-width: 989px) {
-  .product--stacked .grid--collapsed-y .grid__item:last-child {
+  .product--stacked .grid--collapsed-y .grid__item:last-child,
+  .product--stacked .grid--collapsed-x:not(.grid--collapsed-y) .grid__item {
     --bottom-right-radius: var(--border-radius);
     --bottom-left-radius: var(--border-radius);
+  }
+
+  .product--stacked .grid--collapsed-x:not(.grid--collapsed-y) .grid__item {
+    --top-left-radius: var(--border-radius);
+    --top-right-radius: var(--border-radius);
   }
 }
 
