--- a/assets/component-slider.css
+++ b/assets/component-slider.css
@@ -79,12 +79,14 @@ slider-component.slider-component-full-width {
     --bottom-left-radius: 0px;
   }
 
-  .slider.slider--mobile.grid.grid--collapsed-x .slider__slide.grid__item:first-child {
+  .slider.slider--mobile.grid.grid--collapsed-x .slider__slide.grid__item:first-child,
+  .slider.slider--mobile.grid--collapsed-y:not(.grid--collapsed-x) .slider__slide.grid__item {
     --top-left-radius: var(--border-radius);
     --bottom-left-radius: var(--border-radius);
   }
 
-  .slider.slider--mobile.grid.grid--collapsed-x .slider__slide.grid__item:last-child {
+  .slider.slider--mobile.grid.grid--collapsed-x .slider__slide.grid__item:last-child,
+  .slider.slider--mobile.grid--collapsed-y:not(.grid--collapsed-x) .slider__slide.grid__item {
     --top-right-radius: var(--border-radius);
     --bottom-right-radius: var(--border-radius);
   }
@@ -150,12 +152,14 @@ slider-component.slider-component-full-width {
     --bottom-left-radius: 0px;
   }
 
-  .slider.slider--tablet.grid.grid--collapsed-x .slider__slide:first-child {
+  .slider.slider--tablet.grid.grid--collapsed-x .slider__slide:first-child,
+  .slider.slider--tablet.grid--collapsed-y:not(.grid--collapsed-x) .slider__slide.grid__item {
     --top-left-radius: var(--border-radius);
     --bottom-left-radius: var(--border-radius);
   }
 
-  .slider.slider--tablet.grid.grid.grid--collapsed-x .slider__slide:last-child {
+  .slider.slider--tablet.grid.grid.grid--collapsed-x .slider__slide:last-child,
+  .slider.slider--tablet.grid--collapsed-y:not(.grid--collapsed-x) .slider__slide.grid__item {
     --top-right-radius: var(--border-radius);
     --bottom-right-radius: var(--border-radius);
   }
@@ -270,12 +274,14 @@ slider-component.slider-component-full-width {
     --bottom-left-radius: 0px;
   }
 
-  .slider.slider--desktop.grid.grid--collapsed-x .slider__slide.grid__item:first-child {
+  .slider.slider--desktop.grid.grid--collapsed-x .slider__slide.grid__item:first-child,
+  .slider.slider--desktop.grid--collapsed-y:not(.grid--collapsed-x) .slider__slide.grid__item {
     --top-left-radius: var(--border-radius);
     --bottom-left-radius: var(--border-radius);
   }
 
-  .slider.slider--desktop.grid.grid.grid--collapsed-x .slider__slide.grid__item:last-child {
+  .slider.slider--desktop.grid.grid.grid--collapsed-x .slider__slide.grid__item:last-child,
+  .slider.slider--desktop.grid--collapsed-y:not(.grid--collapsed-x) .slider__slide.grid__item {
     --top-right-radius: var(--border-radius);
     --bottom-right-radius: var(--border-radius);
   }
