--- a/assets/grid-collapsed.css
+++ b/assets/grid-collapsed.css
@@ -32,6 +32,14 @@
   --bottom-left-radius: 0px;
 }
 
+/* universal standard card exception */
+.contains-card--standard.grid.grid.grid--collapsed:not(.grid--collapsed-x) .grid__item {
+  --top-left-radius: var(--border-radius);
+  --top-right-radius: var(--border-radius);
+  --bottom-right-radius: var(--border-radius);
+  --bottom-left-radius: var(--border-radius);
+}
+
 @media screen and (max-width: 989px) {
   /* reset shadow origin along first row/col so its flush with grid edge */
   .grid--1-col-tablet-down.grid--collapsed-x .grid__item,
