--- a/assets/collage.css
+++ b/assets/collage.css
@@ -218,21 +218,20 @@
   margin-bottom: calc(var(--card-border-width) * -1);
 }
 
-.collage--collapsed-x .collage__item--left:first-child :where(.card--card, .collage-card):after,
-.collage--collapsed-x .collage__item--left:first-child .card--standard .card__inner:after {
-  margin-right: var(--card-border-width);
-}
-.collage--collapsed-x .collage__item--right:last-child :where(.card--card, .collage-card):after,
-.collage--collapsed-x .collage__item--right:last-child .card--standard .card__inner:after {
-  margin-left: var(--card-border-width);
-}
-
-.collage--collapsed-y .collage__item--left:nth-child(3) :where(.card--card, .collage-card):after,
-.collage--collapsed-y .collage__item--left:nth-child(3) .card--standard .card__inner:after {
-  margin-top: var(--card-border-width);
-}
-
 @media screen and (min-width: 750px) {
+  .collage--collapsed-x .collage__item--left:first-child :where(.card--card, .collage-card):after,
+  .collage--collapsed-x .collage__item--left:first-child .card--standard .card__inner:after {
+    margin-right: var(--card-border-width);
+  }
+  .collage--collapsed-x .collage__item--right:last-child :where(.card--card, .collage-card):after,
+  .collage--collapsed-x .collage__item--right:last-child .card--standard .card__inner:after {
+    margin-left: var(--card-border-width);
+  }
+
+  .collage--collapsed-y .collage__item--left:nth-child(3) :where(.card--card, .collage-card):after,
+  .collage--collapsed-y .collage__item--left:nth-child(3) .card--standard .card__inner:after {
+    margin-top: var(--card-border-width);
+  }
   .collage--collapsed-y .collage__item--right:first-child :where(.card--card, .collage-card):after,
   .collage--collapsed-y .collage__item--right:first-child .card--standard .card__inner:after {
     margin-bottom: var(--card-border-width);
@@ -240,8 +239,7 @@
 }
 
 @media screen and (max-width: 749px) {
-  .collage--collapsed-y:not(.collage--mobile) .collage__item :where(.card--card, .collage-card):after,
-  .collage--collapsed-y:not(.collage--mobile) .collage__item .card--standard .card__inner:after,
+  .collage--collapsed-y:not(.collage--mobile) .collage__item:not(:first-child) :where(.card--card, .collage-card):after,
   .collage--collapsed-y.collage--mobile .collage__item--right:nth-child(3) :where(.card--card, .collage-card):after,
   .collage--collapsed-y.collage--mobile .collage__item--right:nth-child(3) .card--standard .card__inner:after {
     margin-top: var(--card-border-width);
@@ -252,8 +250,8 @@
     margin-bottom: var(--card-border-width);
   }
 
-  .collage--mobile.collage--collapsed-x .collage__item--left:nth-child(3) :where(.card--card, .collage-card):after,
-  .collage--mobile.collage--collapsed-x .collage__item--left:nth-child(3) .card--standard .card__inner:after {
+  .collage--mobile.collage--collapsed-x .collage__item--left:last-child :where(.card--card, .collage-card):after,
+  .collage--mobile.collage--collapsed-x .collage__item--left:last-child .card--standard .card__inner:after {
     margin-left: var(--card-border-width);
   }
 
@@ -331,7 +329,9 @@
   .collage--collapsed-x:not(.collage--collapsed-y).collage--mobile .collage__item--left:nth-last-child(3),
   .collage--collapsed-x:not(.collage--collapsed-y).collage--mobile .collage__item--right:nth-child(3),
   .collage--collapsed-y:not(.collage--collapsed-x).collage--mobile .collage__item--right:nth-child(-n + 2),
-  .collage--collapsed-y.contains-card--standard:not(.collage--mobile) .collage__item:where(.collage__item--product, .collage__item--collection) + .collage__item {
+  .collage--collapsed-y.contains-card--standard:not(.collage--mobile) .collage__item:where(.collage__item--product, .collage__item--collection) + .collage__item,
+  .collage--collapsed-y:not(.collage--collapsed-x).collage--mobile .collage__item--left:nth-child(2):last-child,
+  .collage--collapsed-y:not(.collage--collapsed-x).collage--mobile .collage__item--left:nth-last-child(2):first-child {
     --top-left-radius: var(--card-corner-radius);
     --top-right-radius: var(--card-corner-radius);
   }
@@ -341,7 +341,9 @@
   .collage--collapsed-x:not(.collage--collapsed-y).collage--mobile .collage__item--left:nth-last-child(3),
   .collage--collapsed-x:not(.collage--collapsed-y).collage--mobile .collage__item--right:nth-child(3),
   .collage--collapsed-y:not(.collage--collapsed-x).collage--mobile .collage__item--left:nth-last-child(-n + 2),
-  .collage--collapsed-y.contains-card--standard:not(.collage--mobile) .collage__item:where(.collage__item--product, .collage__item--collection) {
+  .collage--collapsed-y.contains-card--standard:not(.collage--mobile) .collage__item:where(.collage__item--product, .collage__item--collection),
+  .collage--collapsed-y:not(.collage--collapsed-x).collage--mobile .collage__item--right:nth-child(2):last-child,
+  .collage--collapsed-y:not(.collage--collapsed-x).collage--mobile .collage__item--right:nth-last-child(2):first-child {
     --bottom-left-radius: var(--card-corner-radius);
     --bottom-right-radius: var(--card-corner-radius);
   }
@@ -360,14 +362,16 @@
 
   .collage--collapsed-y .collage__item:first-child,
   .collage--collapsed-y.collage--mobile.contains-card--standard .collage__item--right:first-child:where(.collage__item--product, .collage__item--collection) ~ .collage__item:nth-child(3),
-  .collage--collapsed-y.collage--mobile.contains-card--standard .collage__item--left:nth-last-child(3):where(.collage__item--product, .collage__item--collection) + .collage__item:nth-child(2) {
+  .collage--collapsed-y.collage--mobile.contains-card--standard .collage__item--left:nth-last-child(3):where(.collage__item--product, .collage__item--collection) + .collage__item:nth-child(2),
+  .collage--collapsed-y:not(.collage--collapsed-x).collage--mobile.contains-card--standard .collage__item--left:nth-last-child(3):where(.collage__item--product, .collage__item--collection) ~ .collage__item {
     --top-left-radius: var(--card-corner-radius);
   }
 
   .collage--collapsed-x.collage--mobile .collage__item--right:nth-child(2),
   .collage--collapsed-x.collage--mobile .collage__item:last-child:not(:nth-child(3)),
   .collage--collapsed-y.collage--mobile.contains-card--standard .collage__item--right:nth-child(2):where(.collage__item--product, .collage__item--collection) + .collage__item,
-  .collage--collapsed-y.collage--mobile.contains-card--standard .collage__item--left:first-child:where(.collage__item--product, .collage__item--collection) ~ .collage__item:nth-child(3) {
+  .collage--collapsed-y.collage--mobile.contains-card--standard .collage__item--left:first-child:where(.collage__item--product, .collage__item--collection) ~ .collage__item:nth-child(3),
+  .collage--collapsed-y:not(.collage--collapsed-x).collage--mobile.contains-card--standard .collage__item--left:nth-last-child(3):where(.collage__item--product, .collage__item--collection) ~ .collage__item {
     --top-right-radius: var(--card-corner-radius);
   }
 
