Account for product media variant edge cases

--- a/assets/base.css
+++ b/assets/base.css
@@ -2854,11 +2854,11 @@ details-disclosure > details {
 }
 
 .grid--collapsed-x.contains-content-container .content-container:after,
-.grid--collapsed-y.contains-media .global-media-settings:after {
+.grid--collapsed-x.contains-media .global-media-settings:after {
   margin-left: var(--collapsed-shadow-offset-x);
 }
 
-.grid--collapsed-x.contains-content-container .content-container:after,
+.grid--collapsed-y.contains-content-container .content-container:after,
 .grid--collapsed-y.contains-media .global-media-settings:after {
   margin-top: var(--collapsed-shadow-offset-y);
 }
