--- a/assets/section-main-product.css
+++ b/assets/section-main-product.css
@@ -537,9 +537,17 @@ a.product__text {
 }
 
 @media screen and (max-width: 749px) {
-  .product__media-item--variant:first-child {
+  /* center only visible slider item */
+  .product__media-item--variant.product__media-item--only-visible {
     padding-right: 1.5rem;
   }
+}
+/* override slider radius collapse selectors (gallery with 1 visible item still renders as slider) */
+.grid--collapsed.grid.grid.grid .grid__item.product__media-item--variant.product__media-item--only-visible {
+  --top-left-radius: var(--media-radius);
+  --top-right-radius: var(--media-radius);
+  --bottom-right-radius: var(--media-radius);
+  --bottom-left-radius: var(--media-radius);
 }
 
 @media screen and (min-width: 750px) and (max-width: 989px) {
