Replace margin-right with padding for grid offset

--- a/assets/base.css
+++ b/assets/base.css
@@ -2826,22 +2826,34 @@ details-disclosure > details {
   border-right: none;
 }
 
-.grid--collapsed.contains-content-container,
-.grid--collapsed.contains-media {
+.grid--collapsed-x.contains-content-container,
+.grid--collapsed-x.contains-media {
+  padding-right: var(--collapsed-offset-x);
+}
+
+.grid--collapsed-y.contains-content-container,
+.grid--collapsed-y.contains-media {
   padding-bottom: var(--collapsed-offset-y);
+}
+
+.grid--collapsed-x.contains-content-container .content-container,
+.grid--collapsed-x.contains-media .global-media-settings {
   margin-right: var(--collapsed-offset-x);
 }
 
-.grid--collapsed.contains-content-container .content-container,
-.grid--collapsed.contains-media .global-media-settings {
+.grid--collapsed-y.contains-content-container .content-container,
+.grid--collapsed-y.contains-media .global-media-settings {
   margin-bottom: var(--collapsed-offset-y);
-  margin-right: var(--collapsed-offset-x);
 }
 
-.grid--collapsed.contains-content-container .content-container:after,
-.grid--collapsed.contains-media .global-media-settings:after {
-  margin-top: var(--collapsed-shadow-offset-y);
+.grid--collapsed-x.contains-content-container .content-container:after,
+.grid--collapsed-x.contains-media .global-media-settings:after {
   margin-left: var(--collapsed-shadow-offset-x);
+}
+
+.grid--collapsed-y.contains-content-container .content-container:after,
+.grid--collapsed-y.contains-media .global-media-settings:after {
+  margin-top: var(--collapsed-shadow-offset-y);
 }
 
 /* check for flexbox gap in older Safari versions */
