--- a/assets/component-card.css
+++ b/assets/component-card.css
@@ -59,7 +59,7 @@
 
 /* horizontally all card types */
 .grid--collapsed-x.contains-card {
-  margin-right: var(--collapsed-offset-x);
+  padding-right: var(--collapsed-offset-x);
 }
 /* vertically offset all card style grids and standard style collection/article grids */
 .grid--collapsed-y.contains-card:not(.contains-card--standard),
