--- a/assets/section-main-product.css
+++ b/assets/section-main-product.css
@@ -510,6 +510,10 @@ a.product__text {
     padding-right: var(--media-shadow-horizontal-offset);
   }
 
+  .grid--collapsed-x.product__media-list {
+    padding-right: calc(var(--media-shadow-horizontal-offset) + var(--collapsed-offset-x));
+  }
+
   .product--thumbnail .product__media-item:not(.is-active),
   .product--thumbnail_slider .product__media-item:not(.is-active) {
     display: none;
