--- a/assets/section-multicolumn.css
+++ b/assets/section-multicolumn.css
@@ -15,7 +15,7 @@
     margin-bottom: 3rem;
   }
 
-  .multicolumn .page-width {
+  .multicolumn.multicolumn--slider .page-width {
     padding-left: 0;
     padding-right: 0;
   }
@@ -102,20 +102,10 @@
     margin: 0;
     width: 100%;
   }
-
-  .multicolumn-list:not(.slider) {
-    padding-left: 1.5rem;
-    padding-right: 1.5rem;
-  }
 }
 
 
 @media screen and (min-width: 750px) {
-  .multicolumn-list.slider,
-  .multicolumn-list.grid--4-col-desktop {
-    padding: 0;
-  }
-
   .multicolumn-list__item,
   .grid--4-col-desktop .multicolumn-list__item {
     padding-bottom: 0;
